kubernetes/nginx/nginx-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  namespace: default
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: nginx-dev
    http:
      paths:
        - path: "/"
          pathType: Prefix
          backend:
            service:
              name: nginx
              port:
                number: 80
